--- a/VRChat/91/1234991.html
+++ b/VRChat/91/1234991.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "wDBDbSWUI7j0uNTmDkmuKeaJ5EZWfPft/kPYuy0sPUc="></script>
+    "/l3Zdxx0puMAPimAEpxU2DS5eCwVtwOcEG08nZSMW/4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"日本刀","description":"日本刀です。\n鞘と本体が別パーツとなっています。\n\n内容物\nfbxファイル\nUnitypackage\n各種テクスチャ(本体、刀身、matcap2種)\n\n詳細はread meを参照してください。\n\n改変・改造自由\n再配布禁止","url":"https://booth.pm/ja/items/1234991","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/952c1078-6805-447e-8b8e-e44f2166d1fd/i/1234991/90c4c204-0c6d-4588-95af-27534f310ac9_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wDBDbSWUI7j0uNTmDkmuKeaJ5EZWfPft/kPYuy0sPUc="></script>
+    nonce="/l3Zdxx0puMAPimAEpxU2DS5eCwVtwOcEG08nZSMW/4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +159,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1234991/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
@@ -172,14 +174,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1234991/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
