--- a/VRChat/89/1234989.html
+++ b/VRChat/89/1234989.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/627768aa981caf4f27ae.js" defer=
+    "https://asset.booth.pm/assets/d85f848c3417e798bfc2.js" defer=
     "defer" nonce=
-    "imTfl1JdG4e7ZhrH+hbYcId2TMJRw0PVph5eJW2kmj4="></script>
+    "CpHCxFrs6qn/6djIsIvZ26JolOHilEvUjF878wzieX0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"サイフォン","description":"横式サイフォンです。\nシェーダーなどの説明があるのでread me参照してください。\n\n内容物\nfbxデータ\nunitypackage\nテクスチャ(本体一種＋matcap用4種)\n\nボーンによって各部の可動あり\n\n改変・改造自由\n再配布禁止\n\n4/26追記\nアニメーション用モデルを新規に同梱","url":"https://booth.pm/ja/items/1234989","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/952c1078-6805-447e-8b8e-e44f2166d1fd/i/1234989/68a6694c-03fe-418b-9a7f-1bf6e4c243a0_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="imTfl1JdG4e7ZhrH+hbYcId2TMJRw0PVph5eJW2kmj4="></script>
+    nonce="CpHCxFrs6qn/6djIsIvZ26JolOHilEvUjF878wzieX0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -161,10 +161,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1234989/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              49
+                              50
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -176,10 +176,10 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1234989/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              49
+                              50
                             </div>
                           </div></a>
                         </div>
